--- a/DFC.App.MatchSkills/appsettings-template.json
+++ b/DFC.App.MatchSkills/appsettings-template.json
@@ -41,7 +41,8 @@
   "DysacSettings": {
     "ApiUrl": "https://dev.api.nationalcareersservice.org.uk/discover-your-skills-careers/",
     "ApiKey": "",
-    "DysacUrl": "/discover-your-skills-careers/assessment/short/",
+    "ApiVersion": "v1",
+    "DysacUrl": "/discover-your-skills-careers/assessment/short/1",
     "DysacSaveUrl": "#",
     "DysacReturnUrl": "https://dfc-dev-compui-shell-as.azurewebsites.net/discover-your-skills-careers/assessment/return"
   }
