--- a/Resources/AzureDevOps/azure-pipelines.yml
+++ b/Resources/AzureDevOps/azure-pipelines.yml
@@ -10,32 +10,35 @@ resources:
   - repository: dfc-devops
     type: github
     name: SkillsFundingAgency/dfc-devops
-    ref: refs/tags/v1.11.1
+    ref: refs/tags/v1.11.2
     endpoint: 'GitHub (ESFA)'
+
+pool:
+  name: NCS - CI and CD
+  demands:
+    - msbuild
+    - visualstudio
 
 stages:
 - stage: Build
   displayName: Build, Test and Analyze
   jobs:
-  - job: BuildTestAndAnalyze
-    pool:
-      name: NCS - CI and CD
-      demands:
-      - msbuild
-      - visualstudio
+  - job: TestArmTemplates
+    displayName: "Test & package ARM template(s)"
     steps:
-    
-    # Build and test resources
     - template: AzureDevOpsTemplates\Build\StepTemplates\dfc-arm-build.yml@dfc-devops
       parameters:
-        ArmTemplateRoot: $(ArmTemplateRoot)
-    
-    #  Build DFC.App.MatchSkills.WebUI
+        ArmTemplateRoot: '${{ variables.ArmTemplateRoot }}'
+        SolutionBaseName: '${{ variables.SolutionBaseName }}'
+
+  - job: BuildDotNetCore
+    displayName: Build-DotNetCore
+    steps:
     - template: AzureDevOpsTemplates\Build\StepTemplates\dfc-dotnetcore-build-sonar.yml@dfc-devops
       parameters:
         SolutionBaseName: $(SolutionBaseName)
-        BuildPlatform: 'any cpu'
-        BuildConfiguration: 'release'
+        BuildPlatform: $(BuildPlatform)
+        BuildConfiguration: $(BuildConfiguration)
         TestSuffix: Test
         PublishWebApp: true
         DotNetCoreVersion: '3.1.100'
