--- a/Resources/AzureDevOps/azure-pipelines.yml
+++ b/Resources/AzureDevOps/azure-pipelines.yml
@@ -35,13 +35,13 @@ stages:
       displayName: Publish apim policies
       inputs:
         targetPath: "$(System.DefaultWorkingDirectory)/Resources/ApimPolicies"
-        artifactName: '${{ variables.SolutionBaseName }}'
+        artifactName: ${{ variables.SolutionBaseName }}.ApimPolicies
 
     - task: PublishPipelineArtifact@1
       displayName: Publish PageRegistration
       inputs:
           targetPath: "$(System.DefaultWorkingDirectory)/Resources/PageRegistration"
-          artifactName: '${{ variables.SolutionBaseName }}'
+          artifactName: ${{ variables.SolutionBaseName }}.PageRegistration
 
   - job: BuildDotNetCore
     displayName: Build-DotNetCore
