--- a/DFC.App.MatchSkills/DFC.App.MatchSkills.csproj
+++ b/DFC.App.MatchSkills/DFC.App.MatchSkills.csproj
@@ -7,6 +7,7 @@
 
 
   <ItemGroup>
+    <PackageReference Include="DFC.Compui.Telemetry" Version="1.0.28" />
     <PackageReference Include="DFC.Personalisation.Common" Version="0.1.22" />
     <PackageReference Include="DFC.Personalisation.CommonUI" Version="0.2.28" />
     <PackageReference Include="DFC.Personalisation.Domain" Version="0.1.11" />
@@ -18,6 +19,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="3.1.6" />
     <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="3.1.3" />
     <PackageReference Include="Microsoft.Extensions.Options" Version="3.1.3" />
     <PackageReference Include="Microsoft.VisualStudio.SlowCheetah" Version="3.2.26">
