--- a/DFC.App.MatchSkills/DFC.App.MatchSkills.csproj
+++ b/DFC.App.MatchSkills/DFC.App.MatchSkills.csproj
@@ -49,9 +49,7 @@
   </ItemGroup>
 
   <ProjectExtensions>
-    <VisualStudio>
-      <UserProperties appsettings_1json__JsonSchema="" />
-    </VisualStudio>
+    <VisualStudio><UserProperties /></VisualStudio>
   </ProjectExtensions>
 
 </Project>
